--- a/hosted/client.html
+++ b/hosted/client.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Our simple HTTP server</title>
+  <title>Cookbook API</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="bundle.js"></script>
 </head>
 <body>
   <section id="top">
     <!--Navbar, will give user options to add, sort, etc..-->
-    
+    <h1 class="top-element">Cookbook API</h1>
+    <div class="top-element">
+      <input type="text" value="Filter"/>
+    </div>
+    <div class="top-element">
+      <img id="displayAddRecipe" class="displayButton" src="./Add-512.png" alt="Add"/>      
+    </div>
   </section>
-
-  <section id="addRecipe">
-    <!--The form to add a recipe-->
-    <h3>Add a Recipe</h3>
-    <form id="recipeForm" action="/addRecipe" method="post">
-      <label for="title">Title: </label>
-      <input id="titleField" type="text" name="title" />
-      <label for="description">Description: </label>
-      <input id="descriptionField" type="text" name="description" />
-      <label for="price">Price: </label>
-      <input id="priceField" type="number" name="price" min="0" step="1"/>
-      <label for="calories">Calories: </label>
-      <input id="caloriesField" type="number" name="calories" min="0" step="1"/>
-      <input type="submit" value="Add Recipe" />
-      <ul id="ingredientList">
-        <li><input id="ingredientButton" type="button" value="Add Ingredient"/></li>
-      </ul>
-      <ol id="directionList">
-        <li><input id="directionButton" type="button" value="Add Direction"/></li>
-      </ol>
-      <ul id="applianceList">
-        <li><input id="applianceButton" type="button" value="Add Appliance"/></li>
-      </ul>
-  </section>
-
-  <form id="getRecipes">
-  <!--Used to display, needs to be removed, should happen automatically-->
-    <input type="submit" value="Get Recipes" />
-  </form>
 
   <section id="content">
-    <!--Where recipe content will get loaded-->
+    <section id="addRecipe">
+      <!--The form to add a recipe-->
+      <h3>Add a Recipe</h3>
+      <form id="recipeForm" action="/addRecipe" method="post">
+        <label for="title">Title: </label>
+        <input id="titleField" type="text" name="title" />
+        <label for="description">Description: </label>
+        <input id="descriptionField" type="text" name="description" />
+        <label for="price">Price: </label>
+        <input id="priceField" type="number" name="price" min="0" step="1"/>
+        <label for="calories">Calories: </label>
+        <input id="caloriesField" type="number" name="calories" min="0" step="1"/>
+        <input type="submit" value="Add Recipe" />
+        <ul id="ingredientList">
+          <li><input id="ingredientButton" type="button" value="Add Ingredient"/></li>
+        </ul>
+        <ol id="directionList">
+          <li><input id="directionButton" type="button" value="Add Direction"/></li>
+        </ol>
+        <ul id="applianceList">
+          <li><input id="applianceButton" type="button" value="Add Appliance"/></li>
+        </ul>
+      </form>
+    </section>
+
+    <section id="get">
+      <form id="getRecipes" action="/getRecipes" method="get">
+        <input type="submit" value="Get Recipes"/>
+      </form>
+    </section>
+
+    <section id="dynamicContent">
+      <!--Where recipe content will get loaded-->
+    </section>
   </section>
 </body>
 </html>
