Fixed Recipe Updating  - Recipes will now properly update if the title matches an existing title

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -68,7 +68,7 @@
 
     <section id="get">
       <form id="getRecipes" action="/getRecipes" method="get">
-        <input type="submit" value="Get Recipes"/>
+        <input type="submit" value="Refresh Recipe List"/>
       </form>
     </section>
 
