Created Basic Message Center  - Website will now display appropriate message when content is created or updated

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -20,6 +20,11 @@
   </section>
 
   <section id="content">
+    <section id="messageArea">
+      <!--The section to display messages to the user, created successfully, unsuccessfully, etc..-->
+      <input id="hideMessageArea" class="button" type="button" value="Close"/>
+    </section>
+
     <section id="addRecipe">
       <!--The form to add a recipe-->
       <h3>Add a Recipe</h3>
@@ -61,7 +66,7 @@
         </div>
         <input type="submit" class="button" value="Add Recipe" />
       </form>
-      <input id="hideAddRecipe" class="button" class="button" type="button" value="Hide"/>
+      <input id="hideAddRecipe" class="button" type="button" value="Hide"/>
     </section>
 
     <section id="get">
