Progress on Adding Filtering

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -11,7 +11,7 @@
     <!--Navbar, will give user options to add, sort, etc..-->
     <h1 class="top-element">Cookbook API</h1>
     <div class="top-element">
-      <input type="text" class="text-input" value="Filter"/>
+      <input id="filterInput" type="text" class="text-input" value="Filter"/>
     </div>
     <div class="top-element displayButton" id="displayAddRecipe">
       <img src="./Add-512.png" alt="Add" name="AddRecipeButton"/>
