--- a/hosted/client.html
+++ b/hosted/client.html
@@ -37,6 +37,10 @@
           <form id="recipeForm" action="/addRecipe" method="post">
             <div class = "form-split left">
               <div class="form-split-element">
+                  <label for="image">Image: </label>
+                  <input id="imageField" class="button" type="file" name="image" />
+              </div>
+              <div class="form-split-element">
                 <label for="title">Title: </label>
                 <input id="titleField" class="text-input" type="text" name="title" />
               </div>
