--- a/hosted/client.html
+++ b/hosted/client.html
@@ -34,6 +34,11 @@
           <h2>Add a Recipe</h2>
         </div>
         <div class="modal-body">
+          <div class = "modal-background" id="recipeSubmitLoading">
+            <div class="modal-content load-gif">
+              <img src="./loading.gif" alt="Loading"/>
+            </div>
+          </div>
           <label for="image">Image: </label>
           <input id="imageField" class="button" type="file" name="image" />
           <form id="recipeForm" action="/addRecipe" method="post">
