Added Some New Styling

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -77,9 +77,11 @@
                 </ul>
               </div>
             </div>
-            <input type="submit" class="button" value="Add Recipe" />
+            <div class="modal-footer">
+              <input id="hideAddRecipe" class="button button--close div-50" type="button" value="Cancel"/>
+              <input type="submit" class="button div-50" value="Add Recipe" />
+            </div>
           </form>
-          <input id="hideAddRecipe" class="button" type="button" value="Hide"/>
         </div>
       </section>
     </div>
