Sample Content and Editing Recipes Fix  - Sample content added for demonstration purposes  - Fixed issue with editing recipes  - Added ability to remove list items from forms

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -35,7 +35,7 @@
       <section class="modal-content modal-content-large">
         <!--The form to add a recipe-->
         <div class="modal-header">
-          <h2>Add a Recipe</h2>
+          <h2 id="addEditHeader">Add a Recipe</h2>
         </div>
         <div class="modal-body">
           <div class = "modal-background" id="recipeSubmitLoading">
@@ -92,17 +92,7 @@
       </section>
     </div>
 
-    <!-- <section id="get">
-      <form id="getRecipes" action="/getRecipes" method="get">
-        <input type="submit" class="button" value="Refresh Recipe List"/>
-      </form>
-    </section> -->
-
     <div class="grid">
-      <!--Used to size the Masonry elements-->
-      <!-- <div class="grid-sizer"></div>
-      <div class="gutter-sizer"></div> -->
-      
       <div id="dynamicContent">
         <!--Where recipe content will get loaded-->
       </div>
