Final API touches

--- a/hosted/client.html
+++ b/hosted/client.html
@@ -88,6 +88,9 @@
               <input type="submit" class="button div-50" value="Add Recipe" />
             </div>
           </form>
+          <form id="headRequest">
+            <input type="submit" method="HEAD" action="/getRecipes" id="headRequest" class="button" value="get HEAD"/>
+          </form>
         </div>
       </section>
     </div>
